Created the Answers screen and lottie files

--- a/app.json
+++ b/app.json
@@ -16,9 +16,6 @@
       "supportsTablet": true,
       "bundleIdentifier": "com.anonymous.search"
     },
-    "extra": {
-      "EXA_API_KEY": "62f09962-21db-4c5e-ae1e-6ecf053e7dc8"
-    },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
@@ -29,6 +26,7 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": ["expo-font"]
   }
 }
