--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "@react-navigation/bottom-tabs": "^7.3.14",
     "@react-navigation/native": "^7.1.10",
     "@react-navigation/native-stack": "^7.3.14",
-    "expo": "~53.0.9",
+    "expo": "53.0.11",
+    "expo-font": "~13.3.1",
+    "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
     "lottie-react-native": "7.2.2",
     "react": "19.0.0",
-    "react-native": "0.79.2",
+    "react-native": "0.79.3",
     "react-native-dotenv": "^3.4.11",
+    "react-native-hyperlink": "^0.0.22",
+    "react-native-markdown-display": "^7.0.2",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-shimmer-placeholder": "^2.0.9",
